package com.logger.config

object SmartLoggerConfig {
    var serverUrl: String = ""
}
